# sentry-proxy

./: Dockerfile  Makefile  docker-compose.tests.yml  docker-compose.yml  dummy.py  pyproject.toml
.github/workflows/: makefile.yml
certs/: ca-cert.pem  ca-key.pem  ca-signing-key.pem
plugins/: sentry.py
sentry_proxy/: __init__.py  config.py  const.py  sentry_plugin.py
sentry_proxy/filters/: base.py  parse_sentry_data_filter.py  rate_limiter_filter.py
sentry_proxy/storage/: factory.py  memory.py  redis.py
tests/: conftest.py  test_sentry_plugin.py
tests/test_filters/: test_parse_sentry_data_filter.py  test_rate_limiter_filter.py
tests/test_storage/: test_factory.py  test_memory.py  test_redis.py
